--- a/templateLaTeX-Rom/thesis.bib
+++ b/templateLaTeX-Rom/thesis.bib
@@ -26,10 +26,12 @@ month={March},}
     doi = {10.1371/journal.pmed.0050006}
 }
 
-@book{bndef,
- author = {Lewis, Lundy},
- title = {Managing Business and Service Networks},
- year = {2001},
+
+
+@book{oauth,
+ author = {M. Jones, D. Hardt, D. Recordon},
+ title = {The OAuth 2.0 Authorization Framework: Bearer Token Usage},
+ year = {2012},
  isbn = {0306465590},
  publisher = {Kluwer Academic Publishers},
  address = {Norwell, MA, USA}
@@ -42,6 +44,13 @@ month={March},}
   url = {http://hyperledger-fabric.readthedocs.io/en/latest/},
   urldate = {2018-04-06}
 }
+@online{cordadoc,
+  author = {Corda},
+  title = {{Corda} Documentation},
+  year = 2018,
+  url = {https://docs.corda.net/},
+  urldate = {2018-07-06}
+}
 
 @book{p2p,
  author = {Davison, Andrew},
@@ -52,10 +61,161 @@ month={March},}
  publisher = {O'Reilly Media, Inc.}
 } 
 
-@MISC{bitcoin,
-    author = {Satoshi Nakamoto},
-    title = {Bitcoin: A peer-to-peer electronic cash system,” http://bitcoin.org/bitcoin.pdf},
-    year = {}
+@misc{bitcoin,
+  author = {Satoshi Nakamoto},
+  title = {Bitcoin: A Peer-to-Peer Electronic Cash System},
+  year = {2008},
+  month = {Dec},
+  note = {Accessed: 2018-07-20},
+  url = {https://bitcoin.org/bitcoin.pdf},
+}
+@MISC{merkle,
+    author = {Georg Becker and Ruhr-universitat Bochum},
+    title = {Merkle Signature Schemes, Merkle Trees and Their Cryptanalysis},
+    year = {2008}
 }
 
+@misc{eth-yellow,
+  author = {Gavin Wood},
+  title = {Ethereum: A secure decentralised generalised transaction ledger EIP-150 REVISION (759dccd - 2017-08-07)},
+  journal = {Ethereum Project Yellow Paper},
+  year = {2017},
+  note = {Accessed: 2018-01-03},
+  url = {https://ethereum.github.io/yellowpaper/paper.pdf},
+}
+
+@book{crypto,
+ author = {Stallings, William},
+ title = {Cryptography and Network Security: Principles and Practice},
+ year = {2013},
+ isbn = {0133354695, 9780133354690},
+ edition = {6th},
+ pages = {164 - 165},
+ publisher = {Prentice Hall Press},
+ address = {Upper Saddle River, NJ, USA},
+} 
+
+@misc{pow,
+  author = {Arthur Gervais and Ghassan O Karame and Karl W{\"u}st and Vasileios Glykantzis and Hubert Ritzdorf and Srdjan Capkun},
+  title = {On the Security and Performance of Proof of Work Blockchains},
+  year = {2016},
+  note = {Accessed: 2018-07-20},
+  url = {https://eprint.iacr.org/2016/555.pdf},
+}
+
+@article{energy-bit,
+  author = {Karl J O'Dwyer and David Malone},
+  title = {Bitcoin mining and its energy footprint},
+  year = {2014},
+  publisher = {IET},
+  url = {http://karlodwyer.com/publications/pdf/bitcoin\_KJOD\_2014.pdf},
+}
+
+@article{generals,
+ author = {Lamport, Leslie and Shostak, Robert and Pease, Marshall},
+ title = {The Byzantine Generals Problem},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {July 1982},
+ volume = {4},
+ number = {3},
+ month = jul,
+ year = {1982},
+ issn = {0164-0925},
+ pages = {382--401},
+ numpages = {20},
+ url = {http://doi.acm.org/10.1145/357172.357176},
+ doi = {10.1145/357172.357176},
+ acmid = {357176},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{pbft,
+ author = {Castro, Miguel and Liskov, Barbara},
+ title = {Practical Byzantine Fault Tolerance},
+ booktitle = {Proceedings of the Third Symposium on Operating Systems Design and Implementation},
+ series = {OSDI '99},
+ year = {1999},
+ isbn = {1-880446-39-1},
+ location = {New Orleans, Louisiana, USA},
+ pages = {173--186},
+ numpages = {14},
+ url = {http://dl.acm.org/citation.cfm?id=296806.296824},
+ acmid = {296824},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+@inproceedings{sc,
+ author = {Luu, Loi and Chu, Duc-Hiep and Olickel, Hrishi and Saxena, Prateek and Hobor, Aquinas},
+ title = {Making Smart Contracts Smarter},
+ booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+ series = {CCS '16},
+ year = {2016},
+ isbn = {978-1-4503-4139-4},
+ location = {Vienna, Austria},
+ pages = {254--269},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/2976749.2978309},
+ doi = {10.1145/2976749.2978309},
+ acmid = {2978309},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {blockchain, cryptocurrencies, ethereum, smart contract, symbolic execution},
+} 
+
+@misc{permiss,
+  author = {Tim Swanson},
+  title = {Consensus-as-a-service: a brief report on the emergence of permissioned, distributed ledger systems},
+  year = {2015},
+  month = {Apr},
+  note = {Accessed: 2018-07-03},
+  url = {http://www.ofnumbers.com/wp-content/uploads/2015/04/Permissioned-distributed-ledgers.pdf},
+}
+
+@misc{ppp,
+  author = {Jack Saba},
+  title = {Public, Permissioned, and Private Blockchains},
+  year = {2016},
+  month = {Oct},
+  note = {Accessed: 2018-07-03},
+  url = {https://medium.com/@JackSaba/public-permissioned-and-private-blockchains-e35a5c31aa1d},
+}
+
+@inproceedings{hlfv,
+ author = {Androulaki, Elli and Barger, Artem and Bortnikov, Vita and Cachin, Christian and Christidis, Konstantinos and De Caro, Angelo and Enyeart, David and Ferris, Christopher and Laventman, Gennady and Manevich, Yacov and Muralidharan, Srinivasan and Murthy, Chet and Nguyen, Binh and Sethi, Manish and Singh, Gari and Smith, Keith and Sorniotti, Alessandro and Stathakopoulou, Chrysoula and Vukoli\'{c}, Marko and Cocco, Sharon Weed and Yellick, Jason},
+ title = {Hyperledger Fabric: A Distributed Operating System for Permissioned Blockchains},
+ booktitle = {Proceedings of the Thirteenth EuroSys Conference},
+ series = {EuroSys '18},
+ year = {2018},
+ isbn = {978-1-4503-5584-1},
+ location = {Porto, Portugal},
+ pages = {30:1--30:15},
+ articleno = {30},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/3190508.3190538},
+ doi = {10.1145/3190508.3190538},
+ acmid = {3190538},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+@misc{comp,
+  author = {Martin Valenta, Philipp Sandner},
+  title = {Comparison of Ethereum,Hyperledger Fabric and Corda},
+  year = {2017},
+  month = {June},
+  note = {Accessed: 2018-07-03},
+  url = {https://medium.com/@philippsandner/comparison-of-ethereum-hyperledger-fabric-and-corda-21c1bb9442f6},
+}
+
+@misc{comp,
+  author = {Martin Valenta, Philipp Sandner},
+  title = {Comparison of Ethereum,Hyperledger Fabric and Corda},
+  year = {2017},
+  month = {June},
+  note = {Accessed: 2018-07-03},
+  url = {https://medium.com/@philippsandner/comparison-of-ethereum-hyperledger-fabric-and-corda-21c1bb9442f6},
+}
 
