--- a/templateLaTeX-Rom/thesis.bib
+++ b/templateLaTeX-Rom/thesis.bib
@@ -11,6 +11,16 @@ doi={10.1109/TCOM.1964.1088883},
 ISSN={0096-1965}, 
 month={March},}
 
+@book{bndef,
+ author = {Word, Jeffrey},
+ title = {Business Network Transformation: Strategies to Reconfigure Your Business Relationships for Competitive Advantage},
+ year = {2009},
+ isbn = {0470528346, 9780470528341},
+ publisher = {Jossey-Bass Inc., Publishers},
+ address = {San Francisco, CA, USA},
+ pages = {198},
+} 
+
 @article{ctms,
     author = {Fegan, Greg W AND Lang, Trudie A},
     journal = {PLOS Medicine},
