--- a/templateLaTeX-Rom/apendix.tex
+++ b/templateLaTeX-Rom/apendix.tex
@@ -1,28 +1,134 @@
 \appendix
-\chapter{Sec'tiuni relevante din cod}
-
+\chapter{Profil de conexiune Hyperledger Composer}
+\label{app:con}
 \begin{verbatim}
- /** Maps are easy to use in Scala. */
-object Maps {
-  val colors = Map("red" -> 0xFF0000,
-                   "turquoise" -> 0x00FFFF,
-                   "black" -> 0x000000,
-                   "orange" -> 0xFF8040,
-                   "brown" -> 0x804000)
-  def main(args: Array[String]) {
-    for (name <- args) println(
-      colors.get(name) match {
-        case Some(code) =>
-          name + " has code: " + code
-        case None =>
-          "Unknown color: " + name
-      }
-    )
-  }
+{
+    "name": "fabric-network",
+    "x-type": "hlfv1",
+    "version": "1.0.0",
+    "peers": {
+        "peer0.org1.example.com": {
+            "url": "grpc://localhost:7051",
+            "eventUrl": "grpc://localhost:7053"
+        }
+    },
+    "certificateAuthorities": {
+        "ca.org1.example.com": {
+            "url": "http://localhost:7054",
+            "caName": "ca.org1.example.com"
+        }
+    },
+    "orderers": {
+        "orderer.example.com": {
+            "url": "grpc://localhost:7050"
+        }
+    },
+    "organizations": {
+        "Org1": {
+            "mspid": "Org1MSP",
+            "peers": [
+                "peer0.org1.example.com"
+            ],
+            "certificateAuthorities": [
+                "ca.org1.example.com"
+            ]
+        }
+    },
+    "channels": {
+        "composerchannel": {
+            "orderers": [
+                "orderer.example.com"
+            ],
+            "peers": {
+                "peer0.org1.example.com": {
+                    "endorsingPeer": true,
+                    "chaincodeQuery": true,
+                    "eventSource": true
+                }
+            }
+        }
+    },
+    "client": {
+        "organization": "Org1",
+        "connection": {
+            "timeout": {
+                "peer": {
+                    "endorser": "300",
+                    "eventHub": "300",
+                    "eventReg": "300"
+                },
+                "orderer": "300"
+            }
+        }
+    }
 }
 \end{verbatim}
 
-\chapter{Alte informa'tii relevante (demonstra'tii etc.)}
+\chapter{Configurare server REST cu utilizatori multiplii}
+\label{multiusr}
+\begin{verbatim}
+export COMPOSER_PROVIDERS='{
+  "github": {
+    "provider": "github",
+    "module": "passport-github",
+    "clientID": "[ID]",
+    "clientSecret": "[SECRET]",
+    "authPath": "/auth/github",
+    "callbackURL": "/auth/github/callback",
+    "successRedirect": "http://localhost:4200?loggedIn=true",
+    "failureRedirect": "/"
+  }
+}'
+
+export COMPOSER_DATASOURCES='{
+    "db": {
+        "name": "mydb",
+        "connector": "mongodb",
+        "database": "mydb",
+        "host": "localhost"
+    }
+}'
 
 
-\chapter{Lucr'ari publicate (dac'a exist'a)}
+composer-rest-server -c admin@clinic-trial-network -n never -m true
+\end{verbatim}
+
+\chapter{Modul pentru testarea aplica'tiei client}
+\label{app:test}
+\begin{verbatim}
+describe('OrganisationFormComponent', () => {
+  let component: OrganisationFormComponent;
+  let fixture: ComponentFixture<OrganisationFormComponent>;
+
+  beforeEach(async(() => {
+    TestBed.configureTestingModule({
+      imports: [
+        FormsModule,
+        ReactiveFormsModule,
+        AppMaterialModule,
+        RouterTestingModule,
+        HttpClientModule,
+        BrowserAnimationsModule
+      ],
+      declarations: [OrganisationFormComponent],
+      providers:[
+        ResearchSiteService,
+        SupplyOrganisationService,
+        DataService,
+        Configuration
+      ]
+    })
+      .compileComponents();
+  }));
+  beforeEach(() => {
+    fixture = TestBed.createComponent(OrganisationFormComponent);
+    component = fixture.componentInstance;
+    fixture.detectChanges();
+  });
+
+  it('should create', () => {
+    expect(component).toBeTruthy();
+  });
+});
+\end{verbatim}
+
